--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,8 @@ dependencies {
             'org.junit.jupiter:junit-jupiter-api:5.9.0',
             'com.codeborne:selenide:6.9.0',
             'io.qameta.allure:allure-selenide:2.19.0',
-            'com.github.javafaker:javafaker:1.0.2'
+            'com.github.javafaker:javafaker:1.0.2',
+            'org.aeonbits.owner:owner:1.0.4',
     )
 
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.0')
